--- a/app/globals.css
+++ b/app/globals.css
@@ -8,103 +8,99 @@
 }
 
 :root {
-  --background: oklch(0.99 0 0);
-  --foreground: oklch(0 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0 0 0);
-  --popover: oklch(0.99 0 0);
-  --popover-foreground: oklch(0 0 0);
-  --primary: oklch(0 0 0);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.94 0 0);
-  --secondary-foreground: oklch(0 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.44 0 0);
-  --accent: oklch(0.94 0 0);
-  --accent-foreground: oklch(0 0 0);
-  --destructive: oklch(0.63 0.19 23.03);
-  --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.92 0 0);
-  --input: oklch(0.94 0 0);
-  --ring: oklch(0 0 0);
-  --chart-1: oklch(0.81 0.17 75.35);
-  --chart-2: oklch(0.55 0.22 264.53);
-  --chart-3: oklch(0.72 0 0);
-  --chart-4: oklch(0.92 0 0);
-  --chart-5: oklch(0.56 0 0);
-  --sidebar: oklch(0.99 0 0);
-  --sidebar-foreground: oklch(0 0 0);
-  --sidebar-primary: oklch(0 0 0);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.94 0 0);
-  --sidebar-accent-foreground: oklch(0 0 0);
-  --sidebar-border: oklch(0.94 0 0);
-  --sidebar-ring: oklch(0 0 0);
-  --radius: 0.5rem;
-  --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
-  --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
-  --shadow-sm:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
-  --shadow:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
-  --shadow-md:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
-  --shadow-lg:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
-  --shadow-xl:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
-  --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
-  --tracking-normal: 0em;
+  --background: oklch(0.9695 0.0149 94.1976);
+  --foreground: oklch(0.1221 0 0);
+  --card: oklch(0.9850 0.0082 91.4812);
+  --card-foreground: var(--foreground);
+  --popover: var(--card);
+  --popover-foreground: var(--foreground);
+  --primary: oklch(0.7832 0.2315 142.5774);
+  --primary-foreground: oklch(0.9911 0 0);
+  --secondary: oklch(86.026% 0.12781 91.29);
+  --secondary-foreground: oklch(0.9911 0 0);
+  --muted: oklch(0.9002 0.0097 93.5778);
+  --muted-foreground: oklch(0.4190 0.0199 262.6455);
+  --accent: oklch(0.7832 0.2315 142.5774);
+  --accent-foreground: oklch(0.9911 0 0);
+  --destructive: oklch(0.6295 0.2198 28.0384);
+  --destructive-foreground: oklch(0.9911 0 0);
+  --border: oklch(0 0 0);
+  --input: oklch(0 0 0);
+  --ring: var(--primary);
+  --chart-1: oklch(0.6999 0.1796 150.1066);
+  --chart-2: oklch(0.5730 0.1725 24.3832);
+  --chart-3: oklch(0.8498 0.1737 86.5332);
+  --chart-4: oklch(0.6794 0.2000 350.0799);
+  --chart-5: oklch(0.7802 0.1005 210.1406);
+  --sidebar: oklch(0.0972 0.0125 264.9753);
+  --sidebar-foreground: oklch(0.9787 0.0095 93.5671);
+  --sidebar-primary: var(--primary);
+  --sidebar-primary-foreground: oklch(0.1221 0 0);
+  --sidebar-accent: var(--accent);
+  --sidebar-accent-foreground: oklch(0.1221 0 0);
+  --sidebar-border: oklch(0.9791 0 0);
+  --sidebar-ring: var(--primary);
+  --font-sans: Geist, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: Space Mono, ui-monospace, SFMono-Regular, Menlo, monospace;
+  --radius: 0rem;
+  --shadow-2xs: 3px 4px 0px -8px hsl(0 0% 0% / 0.50);
+  --shadow-xs: 3px 4px 0px -8px hsl(0 0% 0% / 0.50);
+  --shadow-sm: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 1px 2px -9px hsl(0 0% 0% / 1.00);
+  --shadow: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 1px 2px -9px hsl(0 0% 0% / 1.00);
+  --shadow-md: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 2px 4px -9px hsl(0 0% 0% / 1.00);
+  --shadow-lg: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 4px 6px -9px hsl(0 0% 0% / 1.00);
+  --shadow-xl: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 8px 10px -9px hsl(0 0% 0% / 1.00);
+  --shadow-2xl: 3px 4px 0px -8px hsl(0 0% 0% / 2.50);
+  --tracking-normal: -0.025em;
   --spacing: 0.25rem;
 }
 
 .dark {
-  --background: oklch(0 0 0);
-  --foreground: oklch(1 0 0);
-  --card: oklch(0.14 0 0);
-  --card-foreground: oklch(1 0 0);
-  --popover: oklch(0.18 0 0);
-  --popover-foreground: oklch(1 0 0);
-  --primary: oklch(1 0 0);
-  --primary-foreground: oklch(0 0 0);
-  --secondary: oklch(0.25 0 0);
-  --secondary-foreground: oklch(1 0 0);
-  --muted: oklch(0.23 0 0);
-  --muted-foreground: oklch(0.72 0 0);
-  --accent: oklch(0.32 0 0);
-  --accent-foreground: oklch(1 0 0);
-  --destructive: oklch(0.69 0.2 23.91);
-  --destructive-foreground: oklch(0 0 0);
-  --border: oklch(0.26 0 0);
-  --input: oklch(0.32 0 0);
-  --ring: oklch(0.72 0 0);
-  --chart-1: oklch(0.81 0.17 75.35);
-  --chart-2: oklch(0.58 0.21 260.84);
-  --chart-3: oklch(0.56 0 0);
-  --chart-4: oklch(0.44 0 0);
-  --chart-5: oklch(0.92 0 0);
-  --sidebar: oklch(0.18 0 0);
-  --sidebar-foreground: oklch(1 0 0);
-  --sidebar-primary: oklch(1 0 0);
-  --sidebar-primary-foreground: oklch(0 0 0);
-  --sidebar-accent: oklch(0.32 0 0);
-  --sidebar-accent-foreground: oklch(1 0 0);
-  --sidebar-border: oklch(0.32 0 0);
-  --sidebar-ring: oklch(0.72 0 0);
-  --radius: 0.5rem;
-  --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
-  --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
-  --shadow-sm:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
-  --shadow:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
-  --shadow-md:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
-  --shadow-lg:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
-  --shadow-xl:
-    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
-  --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
+  --background: oklch(0.1277 0.0108 259.6356);
+  --foreground: oklch(0.9787 0.0095 93.5671);
+  --card: oklch(0.1808 0.0095 255.6419);
+  --card-foreground: var(--foreground);
+  --popover: var(--card);
+  --popover-foreground: var(--foreground);
+  --primary: oklch(0.5394 0.0799 229.9585);
+  --primary-foreground: oklch(0.9911 0 0);
+  --secondary: oklch(0.6497 0.1402 300.1992);
+  --secondary-foreground: oklch(0.9911 0 0);
+  --muted: oklch(0.2091 0.0104 268.1867);
+  --muted-foreground: oklch(0.8199 0.0099 93.5909);
+  --accent: oklch(0.7401 0.2005 144.9983);
+  --accent-foreground: oklch(0.1221 0 0);
+  --destructive: oklch(0.6295 0.2198 28.0384);
+  --destructive-foreground: oklch(0.1221 0 0);
+  --border: oklch(0.9791 0 0);
+  --input: var(--border);
+  --ring: var(--primary);
+  --chart-1: oklch(0.6598 0.1709 260.1660);
+  --chart-2: oklch(0.6999 0.1796 150.1066);
+  --chart-3: oklch(0.7103 0.1960 47.1612);
+  --chart-4: oklch(0.6794 0.2000 350.0799);
+  --chart-5: oklch(0.7802 0.1005 210.1406);
+  --sidebar: oklch(0.0972 0.0125 264.9753);
+  --sidebar-foreground: oklch(0.9787 0.0095 93.5671);
+  --sidebar-primary: var(--primary);
+  --sidebar-primary-foreground: oklch(0.1221 0 0);
+  --sidebar-accent: var(--accent);
+  --sidebar-accent-foreground: oklch(0.1221 0 0);
+  --sidebar-border: var(--border);
+  --sidebar-ring: var(--primary);
+  --font-sans: Geist, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: Space Mono, monospace;
+  --radius: 0.475rem;
+  --shadow-2xs: 3px 4px 0px -8px hsl(0 0% 0% / 0.50);
+  --shadow-xs: 3px 4px 0px -8px hsl(0 0% 0% / 0.50);
+  --shadow-sm: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 1px 2px -9px hsl(0 0% 0% / 1.00);
+  --shadow: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 1px 2px -9px hsl(0 0% 0% / 1.00);
+  --shadow-md: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 2px 4px -9px hsl(0 0% 0% / 1.00);
+  --shadow-lg: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 4px 6px -9px hsl(0 0% 0% / 1.00);
+  --shadow-xl: 3px 4px 0px -8px hsl(0 0% 0% / 1.00), 3px 8px 10px -9px hsl(0 0% 0% / 1.00);
+  --shadow-2xl: 3px 4px 0px -8px hsl(0 0% 0% / 2.50);
 }
 
 @theme inline {
@@ -140,10 +136,16 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
   --shadow-2xs: var(--shadow-2xs);
   --shadow-xs: var(--shadow-xs);
   --shadow-sm: var(--shadow-sm);
@@ -152,11 +154,20 @@
   --shadow-lg: var(--shadow-lg);
   --shadow-xl: var(--shadow-xl);
   --shadow-2xl: var(--shadow-2xl);
+
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
 body {
   letter-spacing: var(--tracking-normal);
 }
+
+
 
 @layer base {
   * {
